--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <header class="header" role="header">
   <div class="container">
     <a href="index.html" class="logo">
-      <img src="img/osobni-bankrot-2019.jpg" alt="Rychlé oddlužení">
+      <img src="img/krotitele-dluhu.jpg" alt="Rychlé oddlužení">
     </a>
 
     <div class="contact">
@@ -37,7 +37,7 @@
         <span class="contact__ico fa fa-envelope-square red md" aria="hidden"></span>
       </div>
       <div class="contact__part">
-        <span class="contact__info"><a href="index.html">info@osobni-bankrot-2019.cz</a></span>
+        <span class="contact__info"><a href="index.html">info@krotiteledluhu.eu</a></span>
       </div>
     </div>
   </div>
@@ -201,7 +201,7 @@
               </div>
             </div>
             <input type="hidden" name="sendForm" value="newMeeting">
-            <input type="hidden" name="_next" value="http://www.osobni-bankrot-2019.cz/podekovani.html" />
+            <input type="hidden" name="_next" value="http://www.krotiteledluhu.eu/podekovani.html" />
             <input type="text" name="_gotcha" style="display:none"/>
             <div class="ta-c m-t-25">
               <button class="btn btn-success btn-lg uppercase" onClick="return validate();">
@@ -236,7 +236,7 @@
               <br>
               <span><strong>Telefon:</strong> +420 725 964 449</span>
               <br>
-              <span><strong>E-mail:</strong> <a href="mailto:info@osobni-bankrot-2019.cz">info@osobni-bankrot-2019.cz</a></span>
+              <span><strong>E-mail:</strong> <a href="mailto:info@krotiteledluhu.eu">info@krotiteledluhu.eu</a></span>
 	      <br>
 	      <br>
 	      <br>
