--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
             </ul>
           </div>
         </div>
-        <p class="orangeinfo"><strong>Jaká bude cena?</strong> Konečná cena za
-          zpracování návrhu je <strong>ZDARMA</strong>.</p>
+        <p class="orangeinfo"><strong>Každý den se na nás obracejí lidé z celé ČR.</strong> Za poslední půlrok se na nás obrátilo <strong> více než 1000 lidí </strong>.</p>
       </section>
       <section role="section" id="formular">
         <h2 class="uppercase red">Začněte ihned a <br> Domluvte si bezplatnou
