--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <header class="header" role="header">
   <div class="container">
     <a href="index.html" class="logo">
-      <img src="img/krotitele-dluhu.jpg" alt="Rychlé oddlužení">
+      <img src="" alt="Rychlé oddlužení">
     </a>
 
     <div class="contact">
@@ -37,7 +37,7 @@
         <span class="contact__ico fa fa-envelope-square red md" aria="hidden"></span>
       </div>
       <div class="contact__part">
-        <span class="contact__info"><a href="index.html">info@krotiteledluhu.eu</a></span>
+        <span class="contact__info"><a href="index.html">info@osobni-bankrot-2019.cz</a></span>
       </div>
     </div>
   </div>
