--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
               <br>
               <span><strong>Telefon:</strong> +420 725 964 449</span>
               <br>
-              <span><strong>E-mail:</strong> <a href="mailto:info@krotiteledluhu.eu">info@krotiteledluhu.eu</a></span>
+              <span><strong>E-mail:</strong> <a href="mailto:info@osobni-bankrot-2019.cz">info@osobni-bankrot-2019.cz</a></span>
 	      <br>
 	      <br>
 	      <br>
