--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <span class="contact__ico fa fa-envelope-square red md" aria="hidden"></span>
       </div>
       <div class="contact__part">
-        <span class="contact__info"><a href="index.html">info@osobni-bankrot-2019.cz</a></span>
+        <span class="contact__info"><a href="mailto:info@osobni-bankrot-2019.cz"><a href="index.html">info@osobni-bankrot-2019.cz</a></span>
       </div>
     </div>
   </div>
