--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
               <br>
               <span><strong>E-mail:</strong> <a href="mailto:info@osobni-bankrot-2019.cz">info@osobni-bankrot-2019.cz</a></span>
 	      <br>
+	      <span><strong>Web provozovatele:</strong> "http://www.spravce.com" </span>
 	      <br>
-	      <br>
-	      <span><strong>Copyright © 2019</strong> </span>
+	      <span><strong>Copyright © 2019  JUDr. Ing. Petr Štillip, advokát, se sídlem Lukavická 16, 301 32 Plzeň</strong> </span>
             </p>
           </div>
           <br>
@@ -262,6 +262,23 @@ var seznam_retargeting_id = 40482;
 /* ]]> */
 </script>
 <script type="text/javascript" src="//c.imedia.cz/js/retargeting.js"></script>
+	
+	<div id="simplecoin-widget"></div>
+<script type="text/javascript">
+    (function (w) {
+        var container = document.getElementById("simplecoin-widget");
+        var ifrm = document.createElement("iframe");
+        ifrm.setAttribute("width", "990");
+        ifrm.setAttribute("height", "100");
+        ifrm.setAttribute("allowtransparency", "true");
+        ifrm.setAttribute("frameborder", "0");
+        container.appendChild(ifrm);
+        var f = function () { ifrm.setAttribute("src", "https://banners.simplecoin.eu/widget/exchange?a=290"); };
+        if (w.addEventListener) { w.addEventListener('load', f, false); } else if (w.attachEvent) { w.attachEvent('onload', f); }
+    }(window));
+</script>
+	
+	
 </body>
 
 </html>
