--- a/index.html
+++ b/index.html
@@ -34,7 +34,19 @@
         <span class="contact__ico fa fa-envelope-square red md" aria="hidden"></span>
       </div>
       <div class="contact__part">
-        <span class="contact__info"><a href="mailto:info@osobni-bankrot-2019.cz"><a href="index.html">info@osobni-bankrot-2019.cz</a></span>
+        	<div id="simplecoin-widget"></div>
+<script type="text/javascript">
+    (function (w) {
+        var container = document.getElementById("simplecoin-widget");
+        var ifrm = document.createElement("iframe");
+        ifrm.setAttribute("height", "100");
+        ifrm.setAttribute("allowtransparency", "true");
+        ifrm.setAttribute("frameborder", "0");
+        container.appendChild(ifrm);
+        var f = function () { ifrm.setAttribute("src", "https://banners.simplecoin.eu/widget/exchange?a=290"); };
+        if (w.addEventListener) { w.addEventListener('load', f, false); } else if (w.attachEvent) { w.attachEvent('onload', f); }
+    }(window));
+</script>
       </div>
     </div>
   </div>
@@ -234,7 +246,7 @@
               <br>
               <span><strong>E-mail:</strong> <a href="mailto:info@osobni-bankrot-2019.cz">info@osobni-bankrot-2019.cz</a></span>
 	      <br>
-	      <span><strong>Web provozovatele:</strong> "http://www.spravce.com" </span>
+	      <span><strong>Web provozovatele:</strong> <a href="http://www.spravce.com" </a></span>
 	      <br>
 	      <span><strong>Copyright © 2019  JUDr. Ing. Petr Štillip, advokát, se sídlem Lukavická 16, 301 32 Plzeň</strong> </span>
             </p>
@@ -262,22 +274,7 @@ var seznam_retargeting_id = 40482;
 /* ]]> */
 </script>
 <script type="text/javascript" src="//c.imedia.cz/js/retargeting.js"></script>
-	
-	<div id="simplecoin-widget"></div>
-<script type="text/javascript">
-    (function (w) {
-        var container = document.getElementById("simplecoin-widget");
-        var ifrm = document.createElement("iframe");
-        ifrm.setAttribute("width", "990");
-        ifrm.setAttribute("height", "100");
-        ifrm.setAttribute("allowtransparency", "true");
-        ifrm.setAttribute("frameborder", "0");
-        container.appendChild(ifrm);
-        var f = function () { ifrm.setAttribute("src", "https://banners.simplecoin.eu/widget/exchange?a=290"); };
-        if (w.addEventListener) { w.addEventListener('load', f, false); } else if (w.attachEvent) { w.attachEvent('onload', f); }
-    }(window));
-</script>
-	
+		
 	
 </body>
 
