--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
       <div class="contact__part">
         <span class="contact__ico fa fa-envelope-square red md" aria="hidden"></span>
       </div>
-      <div class="contact__part">
-        	<div id="simplecoin-widget"></div>
+      <div id="simplecoin-widget"></div>
 <script type="text/javascript">
     (function (w) {
         var container = document.getElementById("simplecoin-widget");
         var ifrm = document.createElement("iframe");
-        ifrm.setAttribute("height", "100");
+        ifrm.setAttribute("width", "300");
+        ifrm.setAttribute("height", "250");
         ifrm.setAttribute("allowtransparency", "true");
         ifrm.setAttribute("frameborder", "0");
         container.appendChild(ifrm);
@@ -246,9 +246,9 @@
               <br>
               <span><strong>E-mail:</strong> <a href="mailto:info@osobni-bankrot-2019.cz">info@osobni-bankrot-2019.cz</a></span>
 	      <br>
-	      <span><strong>Web provozovatele:</strong> <a href="http://www.spravce.com" </a></span>
+	      <span><strong>Copyright © 2019</strong> <a href="http://www.spravce.com" </a></span>
 	      <br>
-	      <span><strong>Copyright © 2019  JUDr. Ing. Petr Štillip, advokát, se sídlem Lukavická 16, 301 32 Plzeň</strong> </span>
+	      <span><strong>JUDr. Ing. Petr Štillip, advokát, se sídlem Lukavická 16, 301 32 Plzeň</strong> </span>
             </p>
           </div>
           <br>
