--- a/index.html
+++ b/index.html
@@ -33,20 +33,7 @@
       <div class="contact__part">
         <span class="contact__ico fa fa-envelope-square red md" aria="hidden"></span>
       </div>
-      <div id="simplecoin-widget"></div>
-<script type="text/javascript">
-    (function (w) {
-        var container = document.getElementById("simplecoin-widget");
-        var ifrm = document.createElement("iframe");
-        ifrm.setAttribute("width", "300");
-        ifrm.setAttribute("height", "250");
-        ifrm.setAttribute("allowtransparency", "true");
-        ifrm.setAttribute("frameborder", "0");
-        container.appendChild(ifrm);
-        var f = function () { ifrm.setAttribute("src", "https://banners.simplecoin.eu/widget/exchange?a=290"); };
-        if (w.addEventListener) { w.addEventListener('load', f, false); } else if (w.attachEvent) { w.attachEvent('onload', f); }
-    }(window));
-</script>
+<span><strong>E-mail:</strong> <a href="mailto:info@osobni-bankrot-2019.cz">info@osobni-bankrot-2019.cz</a></span>
       </div>
     </div>
   </div>
