--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       <div class="contact__part">
         <span class="contact__ico fa fa-envelope-square red md" aria="hidden"></span>
       </div>
-<span><strong>E-mail:</strong> <a href="mailto:info@osobni-bankrot-2019.cz">info@osobni-bankrot-2019.cz</a></span>
+	<div class="contact__part">
+        <span class="contact__info">info@osobni-bankrot-2019.cz</span>
       </div>
     </div>
   </div>
