--- a/index.html
+++ b/index.html
@@ -213,12 +213,11 @@
                 fjs.parentNode.insertBefore(js, fjs);
               }(document, 'script', 'facebook-jssdk'));</script>
               <div class="fb-page" data-href="https://www.facebook.com/krotiteledluhu.eu/" data-tabs="e.g." data-width="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/krotiteledluhu.eu/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/krotiteledluhu.eu/">Krotitelé dluhů - Poradenství v oblasti oddlužení a exekucí</a></blockquote></div>
-
             </div>
           </form>
         </div>
       </section>
-	   
+	<div class="fb-like" data-href="https://www.facebook.com/osobniBankrot2019/" data-width="" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>   
      
       <section role="section" class="kde-nas-najdete">
         <h2 class="uppercase red">Kde nás najdete?</h2>
