--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <span class="contact__ico fa fa-envelope-square red md" aria="hidden"></span>
       </div>
 	<div class="contact__part">
-        <span class="contact__info">info@osobni-bankrot-2019.cz</span>
+        <span class="contact__info">info@osobnibankrot.cz</span>
       </div>
     </div>
   </div>
