--- a/index.html
+++ b/index.html
@@ -227,7 +227,8 @@
 	      <br>
 	      <span><strong>Copyright © 2019</strong> <a href="http://www.spravce.com" </a></span>
 	      <br>
-	      <span><strong>JUDr. Ing. Petr Štillip, advokát, se sídlem Lukavická 16, 301 32 Plzeň</strong> </span>
+	      <span><font size="+2"><strong>   poskytuje právní služby</strong>
+	      <span><strong>JUDr. Ing. Petr Štillip, Ph.D., advokát, se sídlem Lukavická 16, 301 32 Plzeň</strong> </span>
             </p>
           </div>
           <br>
