--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 	      <br>
 	      <span><strong>Copyright © 2019</strong> <a href="http://www.spravce.com" </a></span>
 	      <br>
-	      <span><strong><font size="+2">Poskytoval právních služeb:</strong>
+	      <span><strong><font size="+2">Poskytovatel právních služeb:</strong>
 	      <br>
 	      <span><strong>JUDr. Ing. Petr Štillip, Ph.D., advokát, se sídlem Lukavická 16, 301 32 Plzeň</strong> </span>
             </p>
