--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
               <br>
               <span><strong>E-mail:</strong> <a href="mailto:info@osobni-bankrot-2019.cz">info@osobni-bankrot-2019.cz</a></span>
 	      <br>
-	      <span><strong>Copyright © 2019</strong> <a href="http://www.spravce.com" </a></span>
+	      <span><strong>Copyright © 2020</strong> <a href="http://www.spravce.com" </a></span>
 	      <br>
 	      <span><strong><font size="+2">Poskytovatel právních služeb:</strong>
 	      <br>
@@ -242,7 +242,7 @@
             </p>
           </div>
           <br>
-		 
+		<iframe width="900" height="600" src="https://www.firmy.cz/detail/13220931-lubomir-kapana-teplice.html?widget&limit=3" style="border: none;" frameborder="0"></iframe> 
       </section>
     </article>
   </div>
