--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
               <br>
               <span><strong>Telefon:</strong> +420 725 964 449</span>
               <br>
-              <span><strong>E-mail:</strong> <a href="mailto:info@osobnibankrot2020.cz">info@osobni-bankrot-2019.cz</a></span>
+              <span><strong>E-mail:</strong> <a href="mailto:info@osobnibankrot2020.cz">info@osobnibankrot2020.cz</a></span>
 	      <br>
 	      <span><strong>Copyright © 2020</strong> <a href="http://www.spravce.com" </a></span>
 	      <br>
