--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
         <span class="contact__info">+420 725 964 449</span>
       </div>
     </div>
+
+<div class="contact">
+            <div class="contact__part">
+                <span class="contact__ico fa fa-envelope-square red md" aria="hidden"></span>
+            </div>
+            <div class="contact__part">
+                <span class="contact__info"><a href="mailto:info@osobnibankrot2020.cz">info@osobnibankrot2020.cz</a></span>
+            </div>
+        </div>
     </div>
   </div>
 </header>
@@ -198,7 +207,7 @@
               </div>
             </div>
             <input type="hidden" name="sendForm" value="newMeeting">
-            <input type="hidden" name="_next" value="http://www.krotiteledluhu.eu/podekovani.html" />
+            <input type="hidden" name="_next" value="osobni-bankrot-2019.cz/podekovani.html" />
             <input type="text" name="_gotcha" style="display:none"/>
             <div class="ta-c m-t-25">
               <button class="btn btn-success btn-lg uppercase" onClick="return validate();">
