--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 <header class="header" role="header">
   <div class="container">
 	<div id = "fb-root" > </ div> <script asynchronní Odložit crossorigin = "anonymous" src = "https://www.facebook.com/osobniBankrot2019/" > </script>   
+
+ <div class="fb-like" data-href="https://www.facebook.com/osobniBankrot2019/" data-width="" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>   
 <div class="contact">
       <div class="contact__part">
         <span class="contact__ico fa fa-phone-square red md" aria="hidden"></span>
