--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="container">
 	<div id = "fb-root" > </ div> <script asynchronní Odložit crossorigin = "anonymous" src = "https://www.facebook.com/osobniBankrot2019/" > </script>   
 
- <div class="fb-like" data-href="https://www.facebook.com/osobniBankrot2019/" data-width="" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>   
+	  <div class = "fb-page" data-href = "https://www.facebook.com/osobniBankrot2019/" data-width = "380" data-hide-cover = "false" data-show-facepile = "false " > </div>     
 <div class="contact">
       <div class="contact__part">
         <span class="contact__ico fa fa-phone-square red md" aria="hidden"></span>
