--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <h2 class="uppercase red">Začněte ihned a <br> Domluvte si bezplatnou
           konzultaci.</h2>
         <div class="form" id="form">
-          <form action="https://formspree.io/info@osobnibankrot2020.cz" method="POST">
+          <form action="https://formspree.io/f/xayabpwv" method="POST">
 
             <div class="row">
               <div class="col-xs-12 col-md-6">
